--- a/src/components/calendar-day/calendar-day.module.css
+++ b/src/components/calendar-day/calendar-day.module.css
@@ -1,7 +1,6 @@
 .border{
     border-radius: 8px;
     background: #333;
-    overflow: hidden;
     display: inline-flex;
     flex-flow: column nowrap;
     cursor: pointer;
@@ -48,5 +47,16 @@
     font-size: 18px;
     padding: 0;
     margin: 0 0 2px 0;
+}
+
+.legality{
+    position: absolute;
+    background: #ff8f00;
+    border-radius: 1000px;
+    font-size: 12px;
+    border: 2px #333 solid;
+    padding: 0 5px;
+    transform: translate(-30%,-30%);
+    color: #333;
 }
 
