--- a/src/components/calendar/calendar.module.css
+++ b/src/components/calendar/calendar.module.css
@@ -1,6 +1,6 @@
 #calendar{
-    display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(50px, 1fr));
-    gap: .5em;
-    padding: .5em;
+    /*display: grid;*/
+    /*grid-template-columns: repeat(auto-fill, minmax(50px, 1fr));*/
+    /*gap: .5em;*/
+    /*padding: .5em;*/
 }
