--- a/src/components/day-adder/day-adder.module.css
+++ b/src/components/day-adder/day-adder.module.css
@@ -1,3 +1,12 @@
+.wrapper{
+    padding: 1em 0.5em 0.5em;
+    box-sizing: border-box;
+    font-family: 'Konkhmer Sleokchher', cursive;
+    color: #c8c8c8;
+    max-width: 800px;
+    margin: 0 auto;
+}
+
 .border{
     border-radius: 8px;
     background: #c8c8c8;
@@ -6,9 +15,11 @@
     flex-flow: column nowrap;
     cursor: pointer;
     user-select: none;
+    width: 100%;
 }
 
 .month-area{
+    padding: .5em 0;
     background: #e8e8e8;
     margin: 2px;
     border-radius: 6px;
