--- a/src/components/header/header.module.css
+++ b/src/components/header/header.module.css
@@ -1,6 +1,9 @@
 header{
     background: #003399;
     color: #ffcc00;
+    text-align: center;
+    display: flex;
+    justify-content: center;
 }
 
 h1{
